flex wrap fix

--- a/src/components/banner/banner.css
+++ b/src/components/banner/banner.css
@@ -1,11 +1,7 @@
 .marquee {
   color: black;
-  letter-spacing: 2px;
+  letter-spacing: 3px;
   font-weight: 700;
   padding: 30px;
   font-size: 45px;
-}
-
-.right-sliding {
-  border-bottom: 10px;
 }
